<resources>
    <string name="app_name">ABClient</string>
    <string name="navigation_drawer_open">Открыть панель навигации</string>
    <string name="navigation_drawer_close">Закрыть панель навигации</string>
    <string name="nav_header_title">ABClient</string>
    <string name="nav_header_subtitle">Игровой клиент для neverlands.ru</string>
    <string name="nav_header_desc">Навигационная панель</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_home">Главная</string>
    <string name="menu_chat">Чат</string>
    <string name="menu_map">Карта</string>
    <string name="menu_inventory">Инвентарь</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_settings">Настройки</string>
    
    <string name="proxy_notification_title">ABClient Proxy</string>
    <string name="proxy_notification_text">Прокси-сервер активен</string>
    <string name="proxy_notification_channel_id">proxy_service_channel</string>
    <string name="proxy_notification_channel_name">Прокси-сервис</string>
    
    <string name="login_button">Войти</string>
    <string name="login_username">Имя пользователя</string>
    <string name="login_password">Пароль</string>
    <string name="login_remember">Запомнить пароль</string>
    <string name="login_error">Ошибка авторизации</string>
    <string name="login_edit_profile">Редактировать</string>
    <string name="login_add_profile">Добавить</string>
    <string name="profile_flash_password">Пароль от флешки</string>
    <string name="profile_auto_logon">Автовход</string>
    <string name="profile_use_proxy">Использовать прокси</string>
    <string name="profile_proxy_address">Адрес прокси</string>
    <string name="profile_proxy_username">Имя пользователя прокси</string>
    <string name="profile_proxy_password">Пароль прокси</string>
    <string name="profile_save">Сохранить</string>
    <string name="captcha_notification_channel_name">Капча (бой)</string>
    <string name="captcha_notification_channel_description">Уведомления о ручном вводе капчи для завершения боя</string>
    <string name="captcha_notification_title">Требуется капча</string>
    <string name="captcha_notification_text">Откройте ABClient и введите код с картинки</string>
</resources>
